--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map of Municipalities in Finland</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="" defer></script>
+    <script src="mapScript.js" defer></script>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
@@ -16,21 +16,6 @@
     </script>
 </head>
 <body>
-    <div>
-        <button type="submit" id="map">Show map</button>
-        <button type="suubmit" id="chart">Show chart</button>
-    </div>
-    <script>
-        const mapButton = document.getElementById('map');
-        mapButton.addEventListener('click', () => {
-            // redirect to map.html
-            window.location.href = 'map.html';
-        });
-        const chartButton = document.getElementById('chart');
-        chartButton.addEventListener('click', () => {
-            // redirect to chart.html
-            window.location.href = 'chart.html';
-        });
-    </script>
+    <div id="map"></div>
 </body>
 </html>
