--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="mapScript.js" defer></script>
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
+    <link rel="stylesheet" href="httpss://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
           crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" 
