--- a/test.html
+++ b/test.html
@@ -8,9 +8,28 @@
     <link rel="stylesheet" href="testCSS.css">
 </head>
 <body>
+    <!-- For filtering municipalities -->
     <div class="dropdown">
         <input type="text" class="dropdown-input" id="dropdownInput" placeholder="Search municipality">
         <div class="dropdown-list" id="dropdownList"></div>
+    </div>
+
+    <!-- For choosing year range -->
+    <div class="chooseYears">
+        <input type="text" class="dropdown-input" id="dropdownInput" placeholder="Search municipality">
+        <select id="selectYear">
+            <option value="1976">since 1976</option>
+            <option value="1980">since 1980</option>
+            <option value="1984">since 1984</option>
+            <option value="1988">since 1988</option>
+            <option value="1992">since 1992</option>
+            <option value="1996">since 1996</option>
+            <option value="2000">since 2000</option>
+            <option value="2004">since 2004</option>
+            <option value="2008">since 2008</option>
+            <option value="2012">since 2012</option>
+            <option value="2017">since 2017</option>
+        </select>
     </div>
 
     <div id="chart"></div>
