--- a/map.html
+++ b/map.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map of Municipalities in Finland</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mapStyles.css">
     <script src="mapScript.js" defer></script>
 
-    <link rel="stylesheet" href="httpss://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" 
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" 
           crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" 
@@ -16,6 +16,7 @@
     </script>
 </head>
 <body>
+    <p>Hiii</p>
     <div id="map"></div>
 </body>
 </html>
