--- a/map.html
+++ b/map.html
@@ -16,7 +16,13 @@
     </script>
 </head>
 <body>
-    <p>Hiii</p>
+    <div>
+        <input type="radio" id="showEmployment" name="dataType" checked>
+        <label for="showEmployment">Employment</label>
+        <input type="radio" id="showUnemployment" name="dataType">
+        <label for="showUnemployment">Unemployment</label>
+        <button id="go">Go to Main Page</button>
+    </div>
     <div id="map"></div>
 </body>
 </html>
