--- a/map.html
+++ b/map.html
@@ -16,13 +16,48 @@
     </script>
 </head>
 <body>
-    <div>
+    <div id="topDiv">
         <input type="radio" id="showEmployment" name="dataType" checked>
         <label for="showEmployment">Employment</label>
         <input type="radio" id="showUnemployment" name="dataType">
         <label for="showUnemployment">Unemployment</label>
         <button id="go">Go to Main Page</button>
+        <label for="year">Choose year</label>
+        <select name="year" id="year">
+            <option value="2022">2022</option>
+        </select>
+        <input type="checkbox" id="addData" name="addData"> 
+        <button type="button" id="bottom">drag'n'drop data?</button>    
     </div>
+
     <div id="map"></div>
+
+    <!-- Drag and drop area -->
+    <div class="dragDropContainer" >
+        <button type="button" id="top">Go to top</button>
+        <div class="cardContainer">
+            <div id="11+12" class="card" draggable="true">
+                <p>Labour force</p>
+            </div>
+            <div id="22" class="card" draggable="true">
+                <p>Students</p>
+            </div>
+            <div id="24+29" class="card" draggable="true">
+                <p>Pensioners</p>
+            </div>
+            <div id="99" class="card" draggable="true">
+                <p>Others</p>
+            </div>
+        </div>
+        <div id="dropArea">
+            <div class="legend">Drag and drop here</div>
+            <div id="11" class="card" draggable="true">
+                <p>Employment</p>
+            </div>
+            <div id="12" class="card" draggable="true">
+                <p>Unemployment</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
