--- a/map.html
+++ b/map.html
@@ -15,19 +15,15 @@
             crossorigin="">
     </script>
 </head>
-<body>
+<body> 
     <div id="topDiv">
-        <input type="radio" id="showEmployment" name="dataType" checked>
-        <label for="showEmployment">Employment</label>
-        <input type="radio" id="showUnemployment" name="dataType">
-        <label for="showUnemployment">Unemployment</label>
         <button id="go">Go to Main Page</button>
         <label for="year">Choose year</label>
         <select name="year" id="year">
             <option value="2022">2022</option>
-        </select>
-        <input type="checkbox" id="addData" name="addData"> 
-        <button type="button" id="bottom">drag'n'drop data?</button>    
+        </select>   
+        <button type="button" id="bottom">drag'n'drop data?</button> 
+        <div id="radioDiv"></div>
     </div>
 
     <div id="map"></div>
