--- a/map.html
+++ b/map.html
@@ -14,6 +14,7 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" 
             crossorigin="">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
 </head>
 <body> 
     <div id="topDiv">
@@ -27,6 +28,7 @@
     </div>
 
     <div id="map"></div>
+    <button id="downloadMap">Download Map as PNG</button>
 
     <!-- Drag and drop area -->
     <div class="dragDropContainer" >
