--- a/Election/index.html
+++ b/Election/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/frappe-charts@latest"></script>
-    <link rel="stylesheet" href="testCSS.css">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- For filtering municipalities -->
