--- a/Employment/Chart/index.html
+++ b/Employment/Chart/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <script src="https://unpkg.com/frappe-charts@latest"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <script src="chartScript.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- For filtering municipalities -->
