--- a/Election/index.html
+++ b/Election/index.html
@@ -73,6 +73,7 @@
         </select>
 
     <div id="chart"></div>
+    <button id="downloadChart">Download Chart as PNG</button>
     
 </body>
 </html>
