--- a/Employment/Chart/index.html
+++ b/Employment/Chart/index.html
@@ -62,7 +62,7 @@
 
         </div>
 
-        <div id="correlationDiv">
+        <!--<div id="correlationDiv">
             <label for="ageCorrelation">Show age correlation</label>
             <input type="checkbox" id="ageCorrelation" name="ageCorrelation">
             <label for="sexCorrelation">Show sex correlation</label>
@@ -71,7 +71,7 @@
                 <label for="correlation2">Correlation</label>
                 <input type="checkbox" id="correlation2" name="correlation2">
             </div>
-        </div>
+        </div>-->
 
     </div>
 
