--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="Images/chartImage.svg" class="logo">
+            <img src="Images/home.svg" class="logo">
             <ul>
                 <li><a href="Employment/Chart/index.html">Chart On Employment</a></li>
                 <li><a href="Employment/Map/index.html">Map On Employment</a></li>
