--- a/Election/index.html
+++ b/Election/index.html
@@ -15,71 +15,67 @@
         <div class="navbar">
             <img src="../Images/chart.svg" class="logo">
             <ul>
-                <li><a href="Employment/Chart/index.html">Chart On Employment</a></li>
-                <li><a href="Employment/Map/index.html">Map On Employment</a></li>
                 <li><a href="../home.html">Home</a></li>
+                <li><a href="../Employment/Chart/index.html">Chart On Employment</a></li>
+                <li><a href="../Employment/Map/index.html">Map On Employment</a></li>
             </ul>
         </div> 
 
         <div class="content">
             <h1>Election Results</h1>
-            <p>The chart shows the election cast% for major parties in Finlad</p>
+            <p>The chart shows the election cast% for major parties in Finland</p>
+            <p> Click below to go to the chart</p>
         </div>
         <div>
             <img src="../Images/arrowDown.svg" id="arrowDown">
         </div>
     </div>
 
-    <!-- For filtering municipalities -->
-     <div class="holder1">
-    <div class="dropdown">
-        <label for="dropdownInput">Choose municipality</label>
-        <input type="text" class="dropdown-input" id="dropdownInput" name="inputMunicipality" placeholder="Mainland Finlad">
-        <div class="dropdown-list" id="dropdownList"></div>
-    </div>
+    <div class="container">
+        <div class="holder1">
+            <div class="dropdown">
+                <label for="dropdownInput">Choose municipality</label>
+                <input type="text" class="dropdown-input" id="dropdownInput" name="inputMunicipality" placeholder="Mainland Finland">
+                <div class="dropdown-list" id="dropdownList"></div>
+            </div>
 
-    
-        <!-- For choosing year range -->
-        <div id="yearRangeDiv" class="chooseYears">
-            <label for="selectYear">year range</label>
-            <select id="selectYear" name="selectYear">
-                <option value="1976">since 1976</option>
-                <option value="1980">since 1980</option>
-                <option value="1984">since 1984</option>
-                <option value="1988">since 1988</option>
-                <option value="1992">since 1992</option>
-                <option value="1996">since 1996</option>
-                <option value="2000">since 2000</option>
-                <option value="2004">since 2004</option>
-                <option value="2008">since 2008</option>
-                <option value="2012">since 2012</option>
-                <option value="2017">since 2017</option>
-            </select>
+            <div id="yearRangeDiv" class="chooseYears">
+                <label for="selectYear">Year range</label>
+                <select id="selectYear" name="selectYear">
+                    <option value="1976">since 1976</option>
+                    <option value="1980">since 1980</option>
+                    <option value="1984">since 1984</option>
+                    <option value="1988">since 1988</option>
+                    <option value="1992">since 1992</option>
+                    <option value="1996">since 1996</option>
+                    <option value="2000">since 2000</option>
+                    <option value="2004">since 2004</option>
+                    <option value="2008">since 2008</option>
+                    <option value="2012">since 2012</option>
+                    <option value="2017">since 2017</option>
+                </select>
+            </div>
         </div>
-    </div>
-    <div class="holder2">
-        <!-- For choosing single year -->
-        <div id="singleYearDiv" style="display: none;">
-            <label for="singleYear">single year</label>
-            <select id="singleYear" name="singleYear">
-                <option value="1976">1976</option>
-                <option value="1980">1980</option>
-                <option value="1984">1984</option>
-                <option value="1988">1988</option>
-                <option value="1992">1992</option>
-                <option value="1996">1996</option>
-                <option value="2000">2000</option>
-                <option value="2004">2004</option>
-                <option value="2008">2008</option>
-                <option value="2012">2012</option>
-                <option value="2017">2017</option>
-                <option value="2021">2021</option>
-            </select>
-        </div>
-    </div>
 
-
-    <input type="checkbox" id="showSingleYear" name="showSingleYear">
+        <div class="holder2">
+            <div id="singleYearDiv" style="display: none;">
+                <label for="singleYear">Single year</label>
+                <select id="singleYear" name="singleYear">
+                    <option value="1976">1976</option>
+                    <option value="1980">1980</option>
+                    <option value="1984">1984</option>
+                    <option value="1988">1988</option>
+                    <option value="1992">1992</option>
+                    <option value="1996">1996</option>
+                    <option value="2000">2000</option>
+                    <option value="2004">2004</option>
+                    <option value="2008">2008</option>
+                    <option value="2012">2012</option>
+                    <option value="2017">2017</option>
+                    <option value="2021">2021</option>
+                </select>
+            </div>
+            <input type="checkbox" id="showSingleYear" name="showSingleYear">
     <label for="showSingleYear">Show by single year</label>
 
     
@@ -97,6 +93,10 @@
             <option value="08">KD</option>
             <option value="80">LIB (2004)**</option>
         </select>
+    </div>
+        </div>
+    </div>
+
 
     <div id="chart"></div>
     <button id="downloadChart">Download Chart as PNG</button>
