--- a/Employment/Map/index.html
+++ b/Employment/Map/index.html
@@ -17,15 +17,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
 </head>
 <body> 
-    <div id="topDiv">
-        <button id="go">Go to Main Page</button>
-        <label for="year">Choose year</label>
-        <select name="year" id="year">
-            <option value="2022">2022</option>
-        </select>   
-        <button type="button" id="bottom">drag'n'drop data?</button> 
-        <div id="radioDiv"></div>
+    <div class="banner">
+        <div class="navbar">
+            <img src="../../Images/map.svg" class="logo">
+            <ul>
+                <li><a href="../../home.html">Home</a></li>
+                <li><a href="../../Employment/Chart/index.html">Chart On Employment</a></li>
+                <li><a href="../../Election/index.html">Election Results</a></li>
+            </ul>
+        </div> 
+
+        <div class="content">
+            <h1>Map on Employment</h1>
+            <p>The map shows the employment, unemployment and more data for different regions in Finland</p>
+            <p> Click below to go to the chart</p>
+        </div>
+        <div>
+            <img src="../../Images/arrowDown.svg" id="arrowDown">
+        </div>
     </div>
+
+    <div id="topDiv">
+        <div class="year-container">
+            <label for="year">Choose year</label>
+            <select name="year" id="year">
+                <option value="2022">2022</option>
+            </select>
+        </div>
+        <div class="drag-drop-container">
+            <img src="../../Images/arrowDown.svg" id="bottom" name="bottom" alt="Drag and drop icon">
+            <label for="bottom">Click here to drag and drop data</label>
+        </div>
+    </div>
+    <div id="radioDiv"></div>
 
     <div id="map"></div>
     <button id="downloadMap">Download Map as PNG</button>
