I add most of the things

--- a/Employment/Map/index.html
+++ b/Employment/Map/index.html
@@ -57,7 +57,7 @@
     <!-- Drag and drop area -->
     <div class="dragDropContainer" >
         <button type="button" id="top">Go to top</button>
-        <div class="cardContainer">
+        <div id="dragArea">
             <div id="11+12" class="card" draggable="true">
                 <p>Labour force</p>
             </div>
@@ -72,7 +72,6 @@
             </div>
         </div>
         <div id="dropArea">
-            <div class="legend">Drag and drop here</div>
             <div id="11" class="card" draggable="true">
                 <p>Employment</p>
             </div>
