--- a/Employment/Map/index.html
+++ b/Employment/Map/index.html
@@ -21,7 +21,7 @@
         <div class="navbar">
             <img src="../../Images/map.svg" class="logo">
             <ul>
-                <li><a href="../../home.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Employment/Chart/index.html">Chart On Employment</a></li>
                 <li><a href="../../Election/index.html">Election Results</a></li>
             </ul>
