--- a/Election/index.html
+++ b/Election/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
             <img src="../Images/chart.svg" class="logo">
             <ul>
-                <li><a href="../home.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="../Employment/Chart/index.html">Chart On Employment</a></li>
                 <li><a href="../Employment/Map/index.html">Map On Employment</a></li>
             </ul>
