--- a/Employment/Chart/index.html
+++ b/Employment/Chart/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <img src="../../Images/chart.svg" class="logo">
             <ul>
-                <li><a href="../../home.html">Home</a></li>
+                <li><a href="../../index.html">Home</a></li>
                 <li><a href="../../Employment/Map/index.html">Map On Employment</a></li>
                 <li><a href="../../Election/index.html">Election Results</a></li>
             </ul>
